; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vnops.c_dtfs_node_readlink.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vnops.c_dtfs_node_readlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.puffs_usermount = type { i32 }
%struct.puffs_cred = type { i32 }
%struct.dtfs_file = type { i32 }
%struct.puffs_node = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@VLNK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dtfs_node_readlink(%struct.puffs_usermount* %0, i8* %1, %struct.puffs_cred* %2, i8* %3, i64* %4) #0 {
  %6 = alloca %struct.puffs_usermount*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.puffs_cred*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca %struct.dtfs_file*, align 8
  %12 = alloca %struct.puffs_node*, align 8
  store %struct.puffs_usermount* %0, %struct.puffs_usermount** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.puffs_cred* %2, %struct.puffs_cred** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64* %4, i64** %10, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call %struct.dtfs_file* @DTFS_CTOF(i8* %13)
  store %struct.dtfs_file* %14, %struct.dtfs_file** %11, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = bitcast i8* %15 to %struct.puffs_node*
  store %struct.puffs_node* %16, %struct.puffs_node** %12, align 8
  %17 = load %struct.puffs_node*, %struct.puffs_node** %12, align 8
  %18 = getelementptr inbounds %struct.puffs_node, %struct.puffs_node* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @VLNK, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i8*, i8** %9, align 8
  %26 = load %struct.dtfs_file*, %struct.dtfs_file** %11, align 8
  %27 = getelementptr inbounds %struct.dtfs_file, %struct.dtfs_file* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i64*, i64** %10, align 8
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @strlcpy(i8* %25, i32 %28, i64 %30)
  %32 = load i8*, i8** %9, align 8
  %33 = call i64 @strlen(i8* %32)
  %34 = load i64*, i64** %10, align 8
  store i64 %33, i64* %34, align 8
  ret i32 0
}

declare dso_local %struct.dtfs_file* @DTFS_CTOF(i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @strlcpy(i8*, i32, i64) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
